terraform/customer/azurerm_linux_virtual_machine.tf
resource "azurerm_public_ip" "default" {
  name                = "${local.vm_name}-pip"
  location            = azurerm_resource_group.default.location
  resource_group_name = azurerm_resource_group.default.name
  allocation_method   = "Dynamic"
}

resource "azurerm_network_interface" "default" {
  name                = "${local.vm_name}-nic"
  location            = azurerm_resource_group.default.location
  resource_group_name = azurerm_resource_group.default.name

  ip_configuration {
    name                          = "primary"
    subnet_id                     = azurerm_subnet.default.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id          = azurerm_public_ip.default.id
  }
}

resource "azurerm_linux_virtual_machine" "default" {
  name                  = "${local.vm_name}"
  location              = azurerm_resource_group.default.location
  resource_group_name   = azurerm_resource_group.default.name
  network_interface_ids = [azurerm_network_interface.default.id]
  size                  = var.vm_size
  admin_username        = local.admin_username

  identity {
    type = "SystemAssigned"
  }

  source_image_reference {
    publisher = "Canonical"
    offer     = "0001-com-ubuntu-minimal-jammy-daily"
    sku       = "minimal-22_04-daily-lts-gen2"
    version   = "latest"
  }

  admin_ssh_key {
    username   = local.admin_username
    public_key = local.ssh_key
  }

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Premium_LRS"
  }
}
